PoC: start a single thread
* Add global allocator
* Add spawn function which start a thread with a closure
* TODO fix a bug where multiple threads cannot be started at the same time

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,7 +2,7 @@
 target = "avr-atmega2560.json" # architecture/avr/
 
 [unstable]
-build-std = ["core"]
+build-std = ["core", "alloc"]
 
 [target.'cfg(target_arch = "avr")']
 # runner = "./scripts/qemu-runner.sh"
