--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,13 @@
 	"rust-analyzer.cargo.buildScripts.enable": false,
 	"python.defaultInterpreterPath": ".venv/bin/python",
 	"editor.tabSize": 4,
-	"editor.rulers": [80]
+	"editor.rulers": [
+		80
+	],
+	"files.associations": {
+		"*.jinja": "python",
+		"array": "c",
+		"string_view": "c",
+		"initializer_list": "c"
+	}
 }
