--- a/rust-avrtos/Cargo.toml
+++ b/rust-avrtos/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
+default = ["alloc"]
+alloc = []
 
 [dependencies]
 ufmt = "0.2.0"
