Format generate code metrics with latest gcc (14.2.0)
* Update parse_size_txt.py script to work also with berkeley format for avr-size output

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,12 @@
 	},
 	"python.defaultInterpreterPath": ".venv/bin/python",
 	"editor.tabSize": 4,
-	"editor.rulers": [80]
+	"editor.rulers": [
+		80
+	],
+	"files.associations": {
+		"*.jinja": "python",
+		"*.c": "c",
+		"*.h": "c",
+	},
 }
