--- a/platformio.ini
+++ b/platformio.ini
@@ -50,6 +50,40 @@ monitor_filters =
 build_type = release
 
 # examples
+[env:AllocBump]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/alloc-bump>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_SERIAL_AUTO_INIT=1
+
+[env:AllocGlobal]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/alloc-global>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_SERIAL_AUTO_INIT=1
+	-DCONFIG_KERNEL_GLOBAL_ALLOCATOR_SIZE=511
+
+[env:AllocSlab]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/alloc-slab>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_SERIAL_AUTO_INIT=1
+
 [env:ArduinoPIOBlinkingLed]
 platform = atmelavr
 framework = arduino
@@ -713,7 +747,7 @@ build_flags =
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
 	-DCONFIG_INTERRUPT_POLICY=1
-	-DCONFIG_KERNEL_ASSERT=0
+	-DCONFIG_KERNEL_ASSERT=1
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
