Implement stdin support
* Add example which demonstrates the use of the stdio FILE
* Configure CONFIG_STDIO_USART to use USART0 by default
* Rename CONFIG_STDIO_PRINTF_TO_USART to CONFIG_STDIO_USART
* Introduce deprecated.h file header
* Update metrics

--- a/examples/alloc-global/CMakeLists.txt
+++ b/examples/alloc-global/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(${PROJECT_NAME} main.c)
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_THREAD_CANARIES=1
 	
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 	CONFIG_SERIAL_AUTO_INIT=1
 
 	CONFIG_KERNEL_GLOBAL_ALLOCATOR_SIZE=511
