--- a/examples/drv-spi-can-mcp2515/CMakeLists.txt
+++ b/examples/drv-spi-can-mcp2515/CMakeLists.txt
@@ -5,7 +5,7 @@ if (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
 
 	# AVRTOS Configuration
 	target_compile_definitions(${PROJECT_NAME} PUBLIC
-		CONFIG_STDIO_PRINTF_TO_USART=0
+		CONFIG_STDIO_USART=0
 		CONFIG_DEVICE_MCP2515=1
 		CONFIG_SYSTEM_WORKQUEUE_ENABLE=1
 		CONFIG_KERNEL_SYSLOCK_HW_TIMER=2
