--- a/examples/drv-usart-async/CMakeLists.txt
+++ b/examples/drv-usart-async/CMakeLists.txt
@@ -11,7 +11,7 @@ if (NOT QEMU AND ${FEATURE_USART_COUNT} GREATER 1)
 		CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 		CONFIG_KERNEL_SCHEDULER_DEBUG=0
 		CONFIG_KERNEL_ASSERT=1
-		CONFIG_STDIO_PRINTF_TO_USART=0
+		CONFIG_STDIO_USART=0
 		CONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
 		CONFIG_DRIVERS_USART1_ASYNC=1
 		CONFIG_SYSTEM_WORKQUEUE_ENABLE=1
