--- a/examples/hello-world/CMakeLists.txt
+++ b/examples/hello-world/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(${PROJECT_NAME} main.c)
 target_compile_definitions(${PROJECT_NAME} PUBLIC
     CONFIG_SERIAL_AUTO_INIT=1
     CONFIG_SERIAL_USART_BAUDRATE=115200
-    CONFIG_STDIO_PRINTF_TO_USART=0 # redirect printf to USART0
+    CONFIG_STDIO_USART=0 # redirect printf to USART0
 )
 
 target_link_avrtos(${PROJECT_NAME})
