--- a/examples/mem_slab/CMakeLists.txt
+++ b/examples/mem_slab/CMakeLists.txt
@@ -10,7 +10,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_THREAD_MAIN_STACK_SIZE=0x80
 	CONFIG_THREAD_STACK_SENTINEL=1
 	CONFIG_THREAD_CANARIES=1
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 	CONFIG_KERNEL_UPTIME=1
 )
 
