--- a/examples/stack-sentinel/CMakeLists.txt
+++ b/examples/stack-sentinel/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(${PROJECT_NAME} main.c)
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_UPTIME=1
 
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 
 	CONFIG_THREAD_STACK_CANARY=1
 	CONFIG_THREAD_CANARIES=1
