--- a/examples/stdio/CMakeLists.txt
+++ b/examples/stdio/CMakeLists.txt
@@ -1,11 +1,11 @@
-project(sample_time)
+project(sample_stdio)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_UPTIME=1
-	CONFIG_KERNEL_TIME_API=1
-	CONFIG_STDIO_USART=0
+    CONFIG_SERIAL_AUTO_INIT=1
+    CONFIG_SERIAL_USART_BAUDRATE=115200
+    CONFIG_STDIO_USART=0
 )
 
 target_link_avrtos(${PROJECT_NAME})
