--- a/examples/thread-prio-multiq/CMakeLists.txt
+++ b/examples/thread-prio-multiq/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(${PROJECT_NAME} main.c)
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_THREAD_CANARIES=0
 	CONFIG_THREAD_STACK_SENTINEL=0
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 	CONFIG_INTERRUPT_POLICY=1
 	CONFIG_THREAD_PRIO_MULTIQ=1
 )
