--- a/examples/timers/CMakeLists.txt
+++ b/examples/timers/CMakeLists.txt
@@ -10,7 +10,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_TIME_SLICE_US=10000
 	CONFIG_KERNEL_TIMERS=1
 	CONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x60
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 )
 
 target_link_avrtos(${PROJECT_NAME})
