--- a/examples/drv-api-timers/CMakeLists.txt
+++ b/examples/drv-api-timers/CMakeLists.txt
@@ -6,7 +6,7 @@ if (NOT QEMU)
 	# AVRTOS Configuration
 	target_compile_definitions(${PROJECT_NAME} PUBLIC
 		CONFIG_INTERRUPT_POLICY=1
-		CONFIG_STDIO_PRINTF_TO_USART=0
+		CONFIG_STDIO_USART=0
 		CONFIG_KERNEL_UPTIME=1
 		CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 		CONFIG_DRIVERS_TIMER2_API=1
