--- a/examples/drv-timer/CMakeLists.txt
+++ b/examples/drv-timer/CMakeLists.txt
@@ -14,7 +14,7 @@ if (${FEATURE_TIMER_COUNT} GREATER 3)
 		CONFIG_KERNEL_UPTIME=1
 		CONFIG_THREAD_EXPLICIT_MAIN_STACK=0
 		CONFIG_INTERRUPT_POLICY=1
-		CONFIG_STDIO_PRINTF_TO_USART=0
+		CONFIG_STDIO_USART=0
 		CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 		CONFIG_KERNEL_TIME_SLICE_US=1000
 		CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
