--- a/examples/drv-timers-ctc-toggle/CMakeLists.txt
+++ b/examples/drv-timers-ctc-toggle/CMakeLists.txt
@@ -16,7 +16,7 @@ if (${FEATURE_TIMER_COUNT} GREATER 3)
 		CONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 		CONFIG_THREAD_MAIN_STACK_SIZE=1024
 		
-		CONFIG_STDIO_PRINTF_TO_USART=0
+		CONFIG_STDIO_USART=0
 		
 		CONFIG_INTERRUPT_POLICY=1
 
