--- a/examples/drv-timers/CMakeLists.txt
+++ b/examples/drv-timers/CMakeLists.txt
@@ -15,7 +15,7 @@ if (NOT QEMU)
 		CONFIG_THREAD_EXPLICIT_MAIN_STACK=0
 		CONFIG_KERNEL_THREAD_IDLE=0
 		CONFIG_INTERRUPT_POLICY=1
-		CONFIG_STDIO_PRINTF_TO_USART=0
+		CONFIG_STDIO_USART=0
 		CONFIG_KERNEL_SYSLOCK_HW_TIMER=0
 		CONFIG_KERNEL_TIME_SLICE_US=4000
 		CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
