--- a/examples/drv-usart/CMakeLists.txt
+++ b/examples/drv-usart/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(${PROJECT_NAME} main.c)
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_THREAD_CANARIES=1
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 )
 
 target_link_avrtos(${PROJECT_NAME})
