--- a/examples/events/CMakeLists.txt
+++ b/examples/events/CMakeLists.txt
@@ -6,7 +6,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_THREAD_IDLE=0
 	CONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	CONFIG_THREAD_MAIN_STACK_SIZE=0x80
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 	CONFIG_KERNEL_TIMERS=0
 	CONFIG_KERNEL_UPTIME=1
 	CONFIG_KERNEL_EVENTS=1
