--- a/examples/footprint/CMakeLists.txt
+++ b/examples/footprint/CMakeLists.txt
@@ -13,7 +13,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	# CONFIG_AVRTOS_LINKER_SCRIPT=0
 
 	CONFIG_THREAD_EXPLICIT_MAIN_STACK=0
-	CONFIG_STDIO_PRINTF_TO_USART=-1
+	CONFIG_STDIO_USART=-1
 
 	CONFIG_KERNEL_UPTIME=1
 	CONFIG_INTERRUPT_POLICY=1
