--- a/examples/idle/CMakeLists.txt
+++ b/examples/idle/CMakeLists.txt
@@ -6,7 +6,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_THREAD_IDLE_COOPERATIVE=0
 	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=10000
 	CONFIG_KERNEL_TIME_SLICE_US=10000
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 
 	CONFIG_KERNEL_UPTIME=0
 
