--- a/examples/logging/CMakeLists.txt
+++ b/examples/logging/CMakeLists.txt
@@ -12,7 +12,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	CONFIG_KERNEL_TIME_SLICE_US=1000
 	
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 	CONFIG_LOGGING_SUBSYSTEM=1
 
 	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
