--- a/examples/many-threads/CMakeLists.txt
+++ b/examples/many-threads/CMakeLists.txt
@@ -10,7 +10,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	CONFIG_THREAD_MAIN_COOPERATIVE=0
 
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 
 	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	CONFIG_KERNEL_TIME_SLICE_US=1000
