--- a/examples/minimal-example/CMakeLists.txt
+++ b/examples/minimal-example/CMakeLists.txt
@@ -11,7 +11,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 
 	CONFIG_THREAD_MAIN_COOPERATIVE=1
 	
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 
 	CONFIG_KERNEL_UPTIME=1
 
