--- a/examples/ring/CMakeLists.txt
+++ b/examples/ring/CMakeLists.txt
@@ -7,7 +7,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	CONFIG_KERNEL_TIME_SLICE_US=10000
 
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 	
 	CONFIG_THREAD_CANARIES=1
 
