--- a/examples/signal/CMakeLists.txt
+++ b/examples/signal/CMakeLists.txt
@@ -6,7 +6,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 
 	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=200000
