--- a/examples/thread-ev-spawn/CMakeLists.txt
+++ b/examples/thread-ev-spawn/CMakeLists.txt
@@ -3,7 +3,7 @@ add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-    CONFIG_STDIO_PRINTF_TO_USART=0
+    CONFIG_STDIO_USART=0
     CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000u
     CONFIG_KERNEL_TIME_SLICE_US=1000u
     CONFIG_THREAD_CANARIES=1u
