--- a/examples/workq-delayable/CMakeLists.txt
+++ b/examples/workq-delayable/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(${PROJECT_NAME} main.c)
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_TIME_SLICE_US=1000
 	CONFIG_SYSTEM_WORKQUEUE_ENABLE=1
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_STDIO_USART=0
 	CONFIG_WORKQUEUE_DELAYABLE=1
 	CONFIG_KERNEL_EVENTS=1
 )
