--- a/examples/zephyr-dev-usart-tool/CMakeLists.txt
+++ b/examples/zephyr-dev-usart-tool/CMakeLists.txt
@@ -10,7 +10,7 @@ if (NOT QEMU AND ${FEATURE_USART_COUNT} GREATER 1)
 		CONFIG_THREAD_CANARIES=1
 		CONFIG_KERNEL_SYSCLOCK_DEBUG=0
 		CONFIG_KERNEL_SCHEDULER_DEBUG=0
-		CONFIG_STDIO_PRINTF_TO_USART=0
+		CONFIG_STDIO_USART=0
 		CONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
 		CONFIG_SYSTEM_WORKQUEUE_ENABLE=1
 		CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=0x200
