--- a/rust-avrtos/Cargo.toml
+++ b/rust-avrtos/Cargo.toml
@@ -14,5 +14,7 @@ ufmt = "0.2.0"
 nb = "1.1.0"
 avrtos-sys = { path = "../rust-avrtos-sys" }
 arduino-hal ={ git = "https://github.com/rahix/avr-hal", rev = "ravedude-0.1.6", features = ["arduino-mega2560"] }
+num-traits = { version =  "0.2", default-features = false}
+num-derive = { version =  "0.4", default-features = false}
 
 [build-dependencies]
