--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ resolver = "2"
 members = [
     "rust-avrtos-sys",
     "rust-avrtos",
-    "examples/rs-examples",
+    "examples/rust",
 ]
 
 [profile.dev]
