Move bindgen generation to build.rs
* Document examples
* Improve project structure

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,13 +1,13 @@
 [build]
-target = "avr-atmega2560.json" # architecture/avr/
+target = "architecture/avr/llvm/avr-atmega2560.json" # architecture/avr/
 
 [unstable]
 build-std = ["core", "alloc"]
 
 [target.'cfg(target_arch = "avr")']
-# runner = "./scripts/qemu-runner.sh"
-runner = "./scripts/qemu-debug.sh"
-#runner = "ravedude -cb 115200 mega2560"
+runner = "./scripts/qemu-runner.sh"
+# runner = "./scripts/qemu-debug.sh"
+# runner = "ravedude -cb 115200 mega2560"
 
 # runner = "ravedude -cb 57600 mega2560 -P /dev/ttyACM0"
 
