Update platformio, docs and minor changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -58,7 +58,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_THREAD_CANARIES=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_SERIAL_AUTO_INIT=1
 
 [env:AllocGlobal]
@@ -69,7 +69,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_THREAD_CANARIES=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_SERIAL_AUTO_INIT=1
 	-DCONFIG_KERNEL_GLOBAL_ALLOCATOR_SIZE=511
 
@@ -81,7 +81,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_THREAD_CANARIES=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_SERIAL_AUTO_INIT=1
 
 [env:ArduinoPIOBlinkingLed]
@@ -101,7 +101,7 @@ build_flags =
 	-DCONFIG_KERNEL_ATOMIC_API=1
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
 	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
 	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
@@ -138,7 +138,7 @@ build_flags =
 	-DCONFIG_KERNEL_ATOMIC_API=1
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
 	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
 	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
@@ -175,7 +175,7 @@ build_flags =
 	-DCONFIG_KERNEL_ATOMIC_API=1
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
 	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
 	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
@@ -212,7 +212,7 @@ build_flags =
 	-DCONFIG_KERNEL_ATOMIC_API=1
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
 	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
 	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
@@ -249,7 +249,7 @@ build_flags =
 	-DCONFIG_KERNEL_ATOMIC_API=1
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
 	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
 	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
@@ -286,7 +286,7 @@ build_flags =
 	-DCONFIG_KERNEL_ATOMIC_API=1
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
 	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
 	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
@@ -323,7 +323,7 @@ build_flags =
 	-DCONFIG_KERNEL_ATOMIC_API=1
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
 	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
 	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
@@ -414,7 +414,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_COOPERATIVE_THREADS=0
 	-DCONFIG_KERNEL_THREAD_IDLE=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 
 [env:DemoButton]
 build_src_filter =
@@ -423,7 +423,7 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_KERNEL_FAULT_VERBOSITY=0
 
@@ -435,7 +435,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_INTERRUPT_POLICY=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_DRIVERS_TIMER2_API=1
@@ -473,8 +473,7 @@ build_flags =
 	-DCONFIG_THREAD_CANARIES=1
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-	-DCONFIG_KERNEL_ASSERT=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
 	-DCONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=0x200
@@ -491,7 +490,7 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_DEVICE_MCP2515=1
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=2
@@ -507,7 +506,7 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
@@ -524,7 +523,7 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
@@ -539,7 +538,7 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
@@ -559,7 +558,7 @@ build_flags =
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
 	-DCONFIG_INTERRUPT_POLICY=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
@@ -576,7 +575,7 @@ build_flags =
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
 	-DCONFIG_KERNEL_THREAD_IDLE=0
 	-DCONFIG_INTERRUPT_POLICY=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=0
 	-DCONFIG_KERNEL_TIME_SLICE_US=4000
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
@@ -599,9 +598,8 @@ build_flags =
 	-DCONFIG_KERNEL_THREAD_IDLE=1
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=1024
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_INTERRUPT_POLICY=1
-	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
@@ -620,9 +618,8 @@ build_flags =
 	-DCONFIG_KERNEL_THREAD_IDLE=1
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=1024
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_INTERRUPT_POLICY=1
-	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
@@ -641,9 +638,8 @@ build_flags =
 	-DCONFIG_KERNEL_THREAD_IDLE=1
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=1024
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_INTERRUPT_POLICY=1
-	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
@@ -655,7 +651,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_THREAD_CANARIES=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 
 [env:DrvUsartAsync]
 build_src_filter =
@@ -670,7 +666,7 @@ build_flags =
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_ASSERT=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
 	-DCONFIG_DRIVERS_USART1_ASYNC=1
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
@@ -686,12 +682,11 @@ build_flags =
 	-DCONFIG_KERNEL_THREAD_IDLE=0
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=0x80
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_TIMERS=0
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_KERNEL_EVENTS=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
-	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_THREAD_STACK_SENTINEL=1
@@ -704,7 +699,7 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_KERNEL_FAULT_VERBOSITY=1
 	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=-1
@@ -729,7 +724,6 @@ build_flags =
 	-DCONFIG_KERNEL_TIME_SLICE_US=4000
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-	-DCONFIG_KERNEL_ASSERT=0
 
 [env:Flags]
 build_src_filter =
@@ -741,7 +735,7 @@ build_flags =
 	-DCONFIG_KERNEL_COOPERATIVE_THREADS=1
 	-DCONFIG_DEFAULT_KERNEL_SYSCLOCK_PERIOD_US=250000
 	-DCONFIG_KERNEL_TIME_SLICE_US=250000
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_THREAD_CANARIES=1
 	-DCONFIG_KERNEL_THREAD_IDLE=1
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
@@ -758,11 +752,10 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_THREAD_IDLE=0
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=-1
+	-DCONFIG_STDIO_USART=-1
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
@@ -778,7 +771,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_SERIAL_AUTO_INIT=1
 	-DCONFIG_SERIAL_USART_BAUDRATE=115200
-	-DCONFIG_STDIO_PRINTF_TO_USART=0 # redirect printf to USART0
+	-DCONFIG_STDIO_USART=0 # redirect printf to USART0
 
 [env:Idle]
 build_src_filter =
@@ -790,7 +783,7 @@ build_flags =
 	-DCONFIG_THREAD_IDLE_COOPERATIVE=0
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=10000
 	-DCONFIG_KERNEL_TIME_SLICE_US=10000
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_UPTIME=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
@@ -840,9 +833,8 @@ build_flags =
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_LOGGING_SUBSYSTEM=1
-	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 
 [env:MainStack]
@@ -860,7 +852,6 @@ build_flags =
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=1024
 	-DCONFIG_INTERRUPT_POLICY=1
-	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
@@ -876,7 +867,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=0x60
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=1
@@ -899,7 +890,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=0x80
 	-DCONFIG_THREAD_STACK_SENTINEL=1
 	-DCONFIG_THREAD_CANARIES=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_UPTIME=1
 
 [env:MinimalExample]
@@ -914,7 +905,7 @@ build_flags =
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=-1
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
@@ -1039,7 +1030,7 @@ build_flags =
 	-DCONFIG_KERNEL_COOPERATIVE_THREADS=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	-DCONFIG_KERNEL_TIME_SLICE_US=10000
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_THREAD_CANARIES=1
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_KERNEL_THREAD_IDLE=1
@@ -1047,7 +1038,6 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=0
 	-DCONFIG_INTERRUPT_POLICY=1
-	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=1
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
@@ -1061,7 +1051,7 @@ build_flags =
 	-DCONFIG_KERNEL_COOPERATIVE_THREADS=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
 	-DCONFIG_KERNEL_TIME_SLICE_US=10000
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_THREAD_CANARIES=1
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_KERNEL_THREAD_IDLE=1
@@ -1069,7 +1059,6 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=0
 	-DCONFIG_INTERRUPT_POLICY=1
-	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
@@ -1124,7 +1113,7 @@ build_flags =
 	-DCONFIG_KERNEL_ASSERT=1
 	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x60
 	-DCONFIG_KERNEL_UPTIME=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_THREAD_CANARIES=1
 
 [env:Signal]
@@ -1136,7 +1125,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=200000
 	-DCONFIG_KERNEL_TIME_SLICE_US=200000
@@ -1149,7 +1138,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_UPTIME=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_THREAD_STACK_CANARY=1
 	-DCONFIG_THREAD_CANARIES=1
 	-DCONFIG_THREAD_STACK_SENTINEL=1
@@ -1158,6 +1147,17 @@ build_flags =
 	-DCONFIG_KERNEL_FAULT_VERBOSITY=2
 	-DCONFIG_THREAD_MONITOR=1
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
+[env:Stdio]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/stdio>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_SERIAL_AUTO_INIT=1
+	-DCONFIG_SERIAL_USART_BAUDRATE=115200
+	-DCONFIG_STDIO_USART=0
 
 [env:Sysclock]
 build_src_filter =
@@ -1193,11 +1193,27 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000u
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000u
 	-DCONFIG_THREAD_CANARIES=1u
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
+
+[env:ThreadJoin]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/thread-join>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000000
+	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=100000
+	-DCONFIG_KERNEL_ASSERT=1
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_KERNEL_UPTIME=0
+	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
+	-DCONFIG_THREAD_JOIN=1
 
 [env:ThreadPrioMultiq]
 build_src_filter =
@@ -1206,10 +1222,9 @@ build_src_filter =
 
 build_flags =
     ${env.build_flags}
-	-DCONFIG_KERNEL_ASSERT=0
 	-DCONFIG_THREAD_CANARIES=0
 	-DCONFIG_THREAD_STACK_SENTINEL=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_INTERRUPT_POLICY=1
 	-DCONFIG_THREAD_PRIO_MULTIQ=1
 
@@ -1237,7 +1252,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_UPTIME=1
 	-DCONFIG_KERNEL_TIME_API=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 
 [env:Timers]
 build_src_filter =
@@ -1253,7 +1268,7 @@ build_flags =
 	-DCONFIG_KERNEL_TIME_SLICE_US=10000
 	-DCONFIG_KERNEL_TIMERS=1
 	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x60
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 
 [env:Uptime]
 build_src_filter =
@@ -1263,7 +1278,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_ASSERT=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
@@ -1288,7 +1303,7 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_UPTIME=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 
 [env:WorkqDelayable]
 build_src_filter =
@@ -1299,7 +1314,7 @@ build_flags =
     ${env.build_flags}
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_WORKQUEUE_DELAYABLE=1
 	-DCONFIG_KERNEL_EVENTS=1
 
@@ -1326,7 +1341,7 @@ build_flags =
 	-DCONFIG_THREAD_CANARIES=1
 	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_STDIO_USART=0
 	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
 	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
 	-DCONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=0x200
