--- a/rust-avrtos/Cargo.toml
+++ b/rust-avrtos/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["alloc"]
+default = ["alloc", "debug-alloc"]
 alloc = []
+debug-alloc = ["avrtos-sys/debug"]
 
 [dependencies]
 ufmt = "0.2.0"
