--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=avrtos
-version=1.3.1
+version=2.0.0
 author=Lucas Dietrich
 maintainer=Lucas Dietrich
 sentence=RTOS for AVR Arduino microcontrollers (Uno & Mega)
-paragraph=AVRTOS is a real-time operating system designed for 8-bit AVR-based Arduino microcontrollers. The library supports multithreading (cooperative and preemptive), a simple scheduler (no priority), mutexes, semaphores, events, timers, flags, workqueues, FIFO queues, and drivers for GPIO, UART, EXTI/PCI interrupts, SPI and I2C. It is highly configurable and has been tested on ATmega328P (Arduino UNO/PRO) and ATmega2560 (Arduino MEGA) platforms. The API style is similar to that of the Zephyr RTOS.
+paragraph=AVRTOS is a real-time operating system (RTOS) designed for 8-bit AVR microcontrollers, inspired by the Zephyr RTOS project. It supports multithreading (cooperative and preemptive), a simple scheduler (no priority), simple memory allocators, mutexes, semaphores, events, timers, flags, workqueues, FIFO queues, and drivers for GPIO, UART, EXTI/PCI interrupts, SPI, and I2C. AVRTOS is highly configurable, fully C/C++ compliant. It is highly configurable and has been tested on ATmega328P (Arduino UNO/PRO) and ATmega2560 (Arduino MEGA) platforms.
 category=Timing
 dot_a_linkage=false
 url=https://github.com/lucasdietrich/AVRTOS
