--- a/examples/tickless/CMakeLists.txt
+++ b/examples/tickless/CMakeLists.txt
@@ -18,6 +18,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	# CONFIG_KERNEL_SYSCLOCK_DEBUG=1
 	# CONFIG_KERNEL_SCHEDULER_DEBUG=1
 
+	CONFIG_SERIAL_AUTO_INIT=1
 
 	CONFIG_KERNEL_ASSERT=1
 	CONFIG_KERNEL_DELAY_OBJECT_U32=1
