--- a/examples/tickless/CMakeLists.txt
+++ b/examples/tickless/CMakeLists.txt
@@ -8,6 +8,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_TICKLESS=1
 	CONFIG_KERNEL_TICKLESS_DEBUG=1
 	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_SERIAL_USART_BAUDRATE=500000
 
 	# CONFIG_KERNEL_SYSCLOCK_PERIOD_US=16
 	# CONFIG_KERNEL_TIME_SLICE_US=16
