--- a/examples/ptr-coloring/CMakeLists.txt
+++ b/examples/ptr-coloring/CMakeLists.txt
@@ -1,13 +1,11 @@
-project(sample_poll)
+project(sample_ptr_coloring)
 add_executable(${PROJECT_NAME} main.c)
 
-# AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_POLLING=1
-	CONFIG_KERNEL_ASSERT=1
-	CONFIG_KERNEL_SYSCLOCK_DEBUG=0
-	CONFIG_KERNEL_SCHEDULER_DEBUG=0
+	CONFIG_STDIO_USART=0
+	CONFIG_SERIAL_AUTO_INIT=1
 )
+
 
 target_link_avrtos(${PROJECT_NAME})
 
