--- a/platformio.ini
+++ b/platformio.ini
@@ -118,6 +118,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000llu
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000llu
+	-DCONFIG_POLLING=1
 
 monitor_speed = 9600
 
@@ -155,6 +156,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000llu
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000llu
+	-DCONFIG_POLLING=1
 
 monitor_speed = 9600
 
@@ -192,6 +194,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000llu
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000llu
+	-DCONFIG_POLLING=1
 
 monitor_speed = 9600
 
@@ -229,6 +232,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000llu
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000llu
+	-DCONFIG_POLLING=1
 
 monitor_speed = 9600
 
@@ -266,6 +270,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000llu
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000llu
+	-DCONFIG_POLLING=1
 
 monitor_speed = 9600
 
@@ -303,6 +308,45 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000llu
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000llu
+	-DCONFIG_POLLING=1
+
+monitor_speed = 9600
+
+[env:ArduinoPIOPoll]
+platform = atmelavr
+framework = arduino
+
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/ArduinoPIOPoll>
+
+build_flags =
+	-DCONFIG_AVRTOS_LINKER_SCRIPT=0
+	-DCONFIG_KERNEL_AUTO_INIT=1
+	-DCONFIG_KERNEL_TIMERS=1
+	-DCONFIG_KERNEL_EVENTS=1
+	-DCONFIG_KERNEL_EVENTS_ALLOW_NO_WAIT=1
+	-DCONFIG_KERNEL_ATOMIC_API=1
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_SYSTEM_WORKQUEUE_ENABLE=0
+	-DCONFIG_STDIO_USART=0
+	-DCONFIG_THREAD_MAIN_STACK_SIZE=512
+	-DCONFIG_USE_STDLIB_HEAP_MALLOC_MAIN=1
+	-DCONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
+	-DCONFIG_KERNEL_SYSLOCK_HW_TIMER=2
+	-DCONFIG_KERNEL_DELAY_OBJECT_U32=1
+	-DCONFIG_KERNEL_THREAD_IDLE=1
+	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=96
+	-DCONFIG_THREAD_CANARIES=1
+	-DCONFIG_THREAD_STACK_SENTINEL=0
+	-DCONFIG_KERNEL_ASSERT=0
+	-DCONFIG_KERNEL_ARGS_CHECKS=0
+	-DCONFIG_SERIAL_AUTO_INIT=1
+	-DCONFIG_SERIAL_USART_BAUDRATE=9600lu
+	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
+	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000llu
+	-DCONFIG_KERNEL_TIME_SLICE_US=1000llu
+	-DCONFIG_POLLING=1
 
 monitor_speed = 9600
 
@@ -340,6 +384,7 @@ build_flags =
 	-DCONFIG_THREAD_MAIN_COOPERATIVE=1
 	-DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000llu
 	-DCONFIG_KERNEL_TIME_SLICE_US=1000llu
+	-DCONFIG_POLLING=1
 
 monitor_speed = 9600
 
@@ -985,6 +1030,18 @@ build_flags =
 	-DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
 	-DCONFIG_THREAD_CANARIES=1
 
+[env:Poll]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/poll>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_POLLING=1
+	-DCONFIG_KERNEL_ASSERT=1
+	-DCONFIG_KERNEL_SYSCLOCK_DEBUG=0
+	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
 [env:PremptMultithreadingDemo]
 build_src_filter =
     ${env.build_src_filter}
@@ -1006,6 +1063,16 @@ build_src_filter =
 build_flags =
     ${env.build_flags}
 
+
+[env:PtrColoring]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/ptr-coloring>
+
+build_flags =
+    ${env.build_flags}
+	-DCONFIG_STDIO_USART=0
+	-DCONFIG_SERIAL_AUTO_INIT=1
 
 [env:Reentrancy]
 build_src_filter =
